# boilerplate-copa-aiops

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy.yml
deploy/: check_incomplete.py  db_check.py  db_cleanup.py  generate-github-kubeconfig.ps1  oke-deploy.ps1  oke-deploy.sh  read_report.py
docs/prds/: 001-coleta-eventos-kubernetes.md  002-agente-analise-causa-raiz.md  003-interface-web.md  004-agente-correcao-automatica.md
k8s/aiops/: app.yaml  coredns-custom.yaml  github-actions-sa.yaml  ingress.yaml  mcp-server.yaml  namespace.yaml  postgres.yaml  rbac.yaml
src/my_agent_app/: database.py  main.py
src/my_agent_app/agents/: fix_agent.py  gitops_fix_agent.py  llm.py  rca_agent.py
src/my_agent_app/api/: router.py
src/my_agent_app/collector/: __init__.py  collector.py  event_handler.py
src/my_agent_app/gitops/: __init__.py  catalog.py  github_client.py
src/my_agent_app/models/: __init__.py  report.py
src/my_agent_app/templates/: base.html  error.html  health.html  home.html  report_detail.html  reports.html
src/my_agent_app/web/: router.py
