[project]
name = "my-agent-app"
version = "0.1.0"
description = "Agente inteligente com FastAPI + LangChain + MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.3.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.7",
    "httpx>=0.28.0",
    "kubernetes>=34.1.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent_app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "deploy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["my_agent_app"]

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B310"]
